started working on local polarization description

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -2602,7 +2602,8 @@ $\chi^{ch}(i\nu_n)$ is as follows:
 \begin{align}
  U(i\nu_n) &= \left[  W^{-1}(i\nu_n) + P(i\nu_n)  \right]^{-1} \\
  W(i\nu_n) &= U(i\nu_n) -U(i\nu_n) \chi^{ch}(i\nu_n)U(i\nu_n)  \\
- P(i\nu_n) &= -\left[ \unity - \chi^{ch}(i\nu_n)U(i\nu_n) \right]^{-1} \chi^{ch}(i\nu_n).
+ P(i\nu_n) &= -\left[ \unity - \chi^{ch}(i\nu_n)U(i\nu_n) \right]^{-1} \chi^{ch}(i\nu_n) \\
+           &= \left[ U(i\nu_n) - \chi^{-1}_{ch}(i\nu_n) \right]^{-1}.
 \end{align}
 The charge susceptibility $\chi^{ch}$ is given by
 \begin{align}
@@ -2660,6 +2661,16 @@ frequency axis
  &=   \chi_{ij}^{\uparrow\uparrow}(i\nu_n) + \chi_{ij}^{\downarrow\downarrow}(i\nu_n) 
     +\chi_{ij}^{\uparrow\downarrow}(i\nu_n)  +\chi_{ij}^{\downarrow\uparrow}(i\nu_n) \nonumber \\
  & \hspace{0.3cm} - \delta(i\nu_n) \beta \langle n^{\uparrow}_i+n^{\downarrow}_i  \rangle\langle n^{\uparrow}_j+n^{\downarrow}_j  \rangle.
+\end{align}
+
+
+Being restricted only to the two-index susceptibility $\chi_{ij}$,
+and assuming that only Hubbard- and Hund's terms of the interaction
+are relevant like in section~\ref{sec:glocwloc_dc_factor}, 
+we can simplify the equation for $s$
+we can calculate the polarization elements as
+\begin{align}
+ s
 \end{align}
 
 
